@@ -1,7 +1,7 @@
 CHANGELOG
 
 Current Version 0.4
-- **SmartR and the eAE merge into one project called eTRIKS Analytics**
+- **SmartR and the eAE merge into one project named eTRIKS Analytics**
 - New Feature: KEGG pathway analysis for heatmap clusters
 - New Feature: SmartR is now capable of displaying static images generated by R
 - Improved error handling
@@ -12,6 +12,7 @@ Current Version 0.4
 - Fixed a bug which caused the previous session to be resycled when not wanted
 - Timeline: Fixed the correlogram feature after it was broken by 0.3
 - Timeline: Fixed a bug which occured when the first/last timepoint was not in the zoom range
+- Correlation: Improved behavior when selecting too few points for statistics
 
 Version 0.3
 - Fix: Big datasets lead no longer to an unpextect error
